Aggregation added to getWatchHistory API; Refactor API routes to change PATCH methods to PUT to resolve Vercel CORS errors
